# ModernEasyCuda

./: AddFold.cu  CMakeLists.txt  README.md
tests/: ArrayTests.cpp
